phone edit example added in /account/personal-info

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -112,6 +112,7 @@
   "registration.login": "Already have an account?",
   "registration_text": "We will send you an SMS to verify your phone number. Your standard fare terms apply.",
 
+  "save": "Save",
   "search.find": "Find",
   "search.from": "From",
   "search.select_country": "Select country",
