--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -112,6 +112,7 @@
   "registration.login": "Уже есть аккаунт?",
   "registration_text": "Мы отправим Вам SMS, чтобы подтвердить номер телефона. Применяются стандартные условия вашего тарифа.",
 
+  "save": "Сохранить",
   "search.find": "Найти",
   "search.from": "Откуда",
   "search.select_country": "Выберите страну",
